# knutd_practice_5_2

./: README.rst  pyproject.toml  work.ipynb
