[tool.poetry]
name = "knutd-practice-5-2"
version = "0.1.0"
description = ""
authors = ["Max Zhenzhera <maxzhenzhera@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
scipy = "^1.12.0"
jupyterlab = "^4.1.4"
scikit-learn = "^1.4.1.post1"
matplotlib = "^3.8.3"
sympy = "^1.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
